--- a/virt-setup/tasks/main.yml
+++ b/virt-setup/tasks/main.yml
@@ -2,9 +2,11 @@
 # tasks file for kvm-setup
 - name: Disable KVM
   ansible.builtin.import_tasks: disable-kvm.yml
-  when: kvm.enabled != true
+  when:
+    - kvm.enabled == false
 
 - name: Enable KVM
   ansible.builtin.import_tasks: enable-kvm.yml
-  when: kvm.enabled != false
-    
+  when:
+    - kvm.enabled == true
+    - vagrant.enabled == false
