Add vagrant installation, some kvm fixes

--- a/virt-setup/tasks/main.yml
+++ b/virt-setup/tasks/main.yml
@@ -10,3 +10,9 @@
   when:
     - kvm.enabled == true
     - vagrant.enabled == false
+
+- name: Install Vagrant
+  ansible.builtin.import_tasks: install-vagrant.yml
+  when:
+    - kvm.enabled == false
+    - vagrant.enabled == true
