Something is wrong

--- a/virt-setup/tasks/enable-kvm.yml
+++ b/virt-setup/tasks/enable-kvm.yml
@@ -1,3 +1,6 @@
+- name: Install KVM
+  ansible.builtin.import_tasks: install-kvm.yml
+
 - name: Whitelist KVM modules
   ansible.builtin.import_tasks: whitelist-modules.yml
 
