--- a/inventory-m0.yml
+++ b/inventory-m0.yml
@@ -7,6 +7,15 @@ all:
     ansible_port: 22
     ansible_user: ubuntu
     domain_name: "codeware.local"
+    kvm_host:
+      eth_interface: enp0s31f6
+      bridge_interface: br0
+      ipv4_addresses:
+        - 192.168.0.200/24
+      ipv4_gateway: 192.168.0.1
+      dns_nameservers:
+        - 192.168.0.1
+      libvirt_bridge: br0-default
   children:
     kvm_servers:
       hosts:
