--- a/sandbox-setup.yml
+++ b/sandbox-setup.yml
@@ -2,5 +2,6 @@
 - name: Run kvm role
   hosts: kvm_servers
   roles:
-    - virt-setup
-    - openvpn-setup
+    #    - virt-setup
+    #    - openvpn-setup
+    - kubernetes-tools
