Change containerd config

--- a/kubernetes-tools/tasks/install-packages.yml
+++ b/kubernetes-tools/tasks/install-packages.yml
@@ -7,3 +7,30 @@
       - containerd
       - docker.io
     state: present
+
+- name: Save default containerd config to a temporary file
+  ansible.builtin.shell: containerd config default | sed 's/SystemdCgroup = false/SystemdCgroup = true/g' > /tmp/config.toml
+  register: sed_output
+  changed_when: false
+  check_mode: false
+
+- name: Check if the new configuration is different from the existing one
+  ansible.builtin.command: diff /tmp/config.toml /etc/containerd/config.toml
+  register: diff_result
+  ignore_errors: true
+  changed_when: false
+  check_mode: false
+
+- name: Containerd config diff
+  ansible.builtin.debug:
+    msg: "Containerd config diff {{ diff_result.rc }}"
+ 
+- name: Replace the old configuration with the new one if there are differences (it is run after the role)
+  ansible.builtin.command: mv /tmp/config.toml /etc/containerd/config.toml
+  when: diff_result.rc != 0
+
+- name: Restart containerd
+  ansible.builtin.service:
+    name: containerd
+    state: restarted
+  when: diff_result.rc != 0
