--- a/sandbox-setup.yml
+++ b/sandbox-setup.yml
@@ -2,6 +2,6 @@
 - name: Run kvm role
   hosts: kvm_servers
   roles:
-    #    - virt-setup
+    - virt-setup
     #    - openvpn-setup
     - kubernetes-tools
